--- a/src/app/components/sucursales/sucursales.component.html
+++ b/src/app/components/sucursales/sucursales.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col gap-4 md:grid md:grid-cols-2 my-9 w-3/4 m-auto">
     <div class="flex justify-center">
-        <img [src]="ilustracion_localizacion" alt="" class="w-80 h-auto md:block">
+        <img [src]="ilustracion_localizacion" alt="" class=" w-5/6 h-auto md:block">
     </div>
     <div>
         <div *ngFor="let sucursal of sucursales" class="rounded mb-4">
@@ -9,12 +9,12 @@
           <p>Telefono : {{ sucursal.contacto }}</p>
           <div class="flex gap-3">
               <div class="mt-5">
-                <button class="text-white bg-red-500 py-2 px-3 rounded" (click)="mostrarUbicacion(sucursal)">
+                <button class="text-white bg-red-700 py-2 px-3 rounded" (click)="mostrarUbicacion(sucursal)">
                     Ver en Google Maps
                 </button>
               </div>
               <div class="mt-5">
-                <button class="text-white bg-red-500 py-2 px-3 rounded" (click)="mandarMensaje(sucursal)">
+                <button class="text-white bg-red-700 py-2 px-3 rounded" (click)="mandarMensaje(sucursal)">
                     Whatsapp
                 </button>
               </div>
