--- a/src/app/components/buttons-categories-food/buttons-categories-food.component.html
+++ b/src/app/components/buttons-categories-food/buttons-categories-food.component.html
@@ -9,8 +9,8 @@
     <button (click)="buscarProducto()" class="p-2 border-red-700 border-2 rounded hover:bg-red-600">Buscar</button>
   </div>
   <div class="p-4 text-center rounded-t-lg">
-    <h2 class=" text-amber-500 text-2xl font-bold">
-      Menu Pollos Mary Chuy
+    <h2 class=" text-amber-500 text-2xl font-bold uppercase">
+      Menú Pollos Mary Chuy
     </h2>
 </div>
     <div class="flex flex-wrap justify-center gap-4 my-5">
