--- a/src/app/components/sucursales/sucursales.component.html
+++ b/src/app/components/sucursales/sucursales.component.html
@@ -5,8 +5,8 @@
     <div>
         <div *ngFor="let sucursal of sucursales" class="rounded mb-4">
           <h2 class="text-xl md:text-3xl font-bold text-amber-500">{{ sucursal.nombre }}</h2>
-          <p>{{ sucursal.direccion }}</p>
-          <p>Teléfono : {{ sucursal.contacto }}</p>
+          <p class=" font-bold">{{ sucursal.direccion }}</p>
+          <p class="font-bold">Teléfono : <span class=" font-semibold opacity-75">{{ sucursal.contacto }}</span></p>
           <div class="flex gap-3">
               <div class="mt-5">
                 <button class="text-white bg-red-700 py-2 px-3 rounded" (click)="mostrarUbicacion(sucursal)">
