--- a/src/app/components/buttons-categories-food/buttons-categories-food.component.html
+++ b/src/app/components/buttons-categories-food/buttons-categories-food.component.html
@@ -30,7 +30,7 @@
         (click)="mostrarProductos('alitas_boneless')"
         class="bg-red-700 text-white px-4 py-2 rounded uppercase shadow-md hover:bg-orange-600 hover:shadow-xl hover:scale-105 transition-all duration-300 ease-in-out"
       >
-        Alitas
+        Alitas y boneless
       </button>
       <button
         (click)="mostrarProductos('guarniciones')"
