--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,7 +9,7 @@
         <!-- <img [src]="logo_pantallas_lg" alt="Logo grande"
          class="hidden md:block w-full h-lvh md:h-2/6 object-cover"> -->
 
-         <img [src]="iamgen_encabezado_grande" alt="" class="block h-80 w-full object-cover object-top">
+         <img [src]="iamgen_encabezado_grande" alt="" class="block altura_imagen_local w-full object-cover object-center">
     </div>
     <div>
         <app-sucursales></app-sucursales>
