--- a/src/app/components/alitas-boneless/alitas-boneless.component.html
+++ b/src/app/components/alitas-boneless/alitas-boneless.component.html
@@ -1,3 +1,13 @@
+<div class=" mt-10 flex flex-col md:flex-row md:mt-4 justify-center w-full">
+  <div class="flex justify-center items-center">
+    <h2 class="text-md md:text-2xl font-bold bg-red-600 rounded px-4 py-2 text-white shadow">
+      {{text_salsas | uppercase}}
+    </h2>
+  </div>
+  <div class="flex justify-center items-center">
+    <img [src]="salsas_imagen" alt="" class="w-5/6">
+  </div>
+</div>
 <div
   class="card-container grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8 p-4"
 >
