--- a/src/app/components/pollos/pollos.component.html
+++ b/src/app/components/pollos/pollos.component.html
@@ -16,7 +16,7 @@
       [ngSrc]="producto.imagen"
       alt="{{ producto.nombre }}"
       class="absolute inset-0 w-full h-full object-cover" 
-      (click)="openModal(producto)" 
+      (click)="verImagen(producto.imagen)"
       fill
     />
   </div>
@@ -50,7 +50,7 @@
     </button>
     
     <div class="flex justify-center w-full h-4/5">
-      <img [src]="selectedProducto.imagen" alt="{{selectedProducto.nombre}}" class="w-full md:w-4/5 h-auto object-content mb-4 rounded-lg">
+      <img [src]="selectedProducto.imagen" alt="{{selectedProducto.nombre}}" class="w-full md:w-4/5 h-auto object-content md:object-cover object-center mb-4 rounded-lg">
     </div>
       <h3 class="text-2xl font-semibold text-gray-800 mb-2">{{ selectedProducto.nombre | uppercase }}</h3>
       <p class="text-lg text-gray-600 mb-4">{{ selectedProducto.descripcion }}</p>
@@ -63,4 +63,11 @@
     </div>
     </div>
   </div>
-  
+  <div *ngIf="imagenAmpliada" class="fixed inset-0 bg-black bg-opacity-90 flex justify-center items-center z-50">
+  <img [src]="imagenAmpliada" class="max-w-full max-h-full object-contain rounded-lg shadow-lg" />
+  <button
+    class="absolute top-4 right-4 bg-red-600 text-white w-10 h-10 rounded-full text-2xl flex items-center justify-center hover:bg-red-700"
+    (click)="cerrarImagen()">
+    &times;
+  </button>
+</div>
